--- a/docs/eigen-emulators.qmd
+++ b/docs/eigen-emulators.qmd
@@ -20,6 +20,7 @@ jupyter: python3
 
 ::: {.content-hidden when-format="pdf"}
 ```{python}
+import matplotlib as mpl
 import matplotlib.pyplot as plt
 import numpy as np
 import seaborn as sns
@@ -31,7 +32,7 @@ from emulate import convert_from_r_to_ho_basis
 from emulate import leggauss_shifted
 from emulate import ho_energy, ho_radial_wf
 from emulate import setup_rc_params
-from emulate import EigenEmulator, NCSMEmulator, BoundStateOperator
+from emulate import EigenEmulator, OscillatorEmulator, BoundStateOperator
 
 setup_rc_params()
 sns.set_palette('pastel')
@@ -39,7 +40,7 @@ sns.set_palette('pastel')
 :::
 
 
-```{python}
+<!-- ```{python}
 print(plt.rcParams['savefig.dpi'])
 print(plt.rcParams['figure.dpi'])
 print(plt.rcParams['figure.figsize'])
@@ -48,8 +49,9 @@ print(plt.rcParams["figure.constrained_layout.h_pad"])
 print(plt.rcParams["figure.constrained_layout.w_pad"])
 print(plt.rcParams["savefig.pad_inches"])
 print(plt.rcParams["savefig.bbox"])
-```
+``` -->
 
+![Model reduction](./test_fig/tex/test_fig.png){fig.pos="tb" fig-env="figure*"}
 
 
 This notebook describes the inner workings of the eigen-emulator and provides examples of its use.
@@ -106,6 +108,7 @@ b = 1       # Oscillator parameter
 r, dr = leggauss_shifted(100, 0, 10)
 # Gridded points (for plotting)
 r_grid = np.linspace(0, 3, 301)
+n_train = 6
 ```
 
 
@@ -155,7 +158,7 @@ For now, we will just fill the space using a random design. More optimal methods
 
 ```{python}
 rng = np.random.default_rng(1)
-p_train = rng.uniform(-5, 5, size=(6, H1.shape[-1]))
+p_train = rng.uniform(-5, 5, size=(n_train, H1.shape[-1]))
 p_valid = rng.uniform(-5, 5, size=(50, H1.shape[-1]))
 print(p_train)
 ```
@@ -187,33 +190,44 @@ E_full = np.stack([emulator.predict(p_i, use_emulator=False) for p_i in p_valid]
 wf_train = osc_wfs @ emulator.X
 ```
 
-
 ```{python}
 #| code-summary: Code to plot the potential and wave functions
 #| code-fold: true
 #| output: false
 
-fig, axes = plt.subplots(len(p_train)//2, 2+(len(p_train)%2), figsize=(4, 3.4), sharey=True, sharex=True)
+fig, axes = plt.subplots(
+    len(p_train)//2, 2+(len(p_train)%2), figsize=(3.3, 3),
+    sharey=True, sharex=True,
+    layout="tight",
+)
 
 V0 = oscillator_potential(r_grid, mass=mass, omega=1)
 for i, p_i in enumerate(p_train):
     ax = axes.ravel()[i]
-    ax.plot(r_grid, wf_train[:, i]+emulator.E_train[i], label=r'$u_0(r)$')
+    psi_line, = ax.plot(r_grid, wf_train[:, i]+emulator.E_train[i], label=r'$\psi(r)$')
     ax.axhline(0, 0, 1, c='lightgrey', lw=0.8, zorder=0)
     V = V0 + H1_r_grid @ p_i
-    ax.plot(r_grid, V, c='k', lw=1, label=r"$V(\vec{a})$")
+    pot_line, = ax.plot(r_grid, V, c='k', lw=0.8, label=r"$V(\boldsymbol{\theta})$")
     ax.text(
-        0.94, 0.11, fr"$\vec{{a}}_{{{i}}}$",
+        0.93, 0.12, fr"$\boldsymbol{{\theta}}_{{{i}}}$",
         transform=ax.transAxes, ha='right', va='bottom',
         bbox=dict(facecolor='w', boxstyle='round'),
     )
-axes[0, -1].legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
+# axes[0, -1].legend(loc='upper left', bbox_to_anchor=(1.03, 1), borderaxespad=0)
+# axes[0, 0].legend(loc='lower left', bbox_to_anchor=(0, 1.03), ncol=2, borderaxespad=0)
+# axes[0, 0].legend((psi_line,), (r'$\psi(r)$',), loc='lower left', bbox_to_anchor=(0, 1.03), ncol=2, borderaxespad=0)
+axes[0, 0].legend(loc='lower left', bbox_to_anchor=(0, 1.05, 1, 1), ncol=2, borderaxespad=0, columnspacing=0.3, mode="expand")
+# fig.legend(
+#     (psi_line, pot_line), (r'$\psi(r)$', r"$V(\boldsymbol{\theta})$"),
+#     loc='lower left', bbox_to_anchor=(0, 1.03), ncol=2, borderaxespad=0,
+#     bbox_transform=axes[0, 0].transAxes, framealpha=1,
+# )
 for ax in axes[-1]:
-    ax.set_xlabel(r"$r$")
+    ax.set_xlabel(r"Radius $r$ [fm]")
     ax.set_xticks([0, 1, 2, 3])
 ax.set_ylim(-6, 6)
-fig.suptitle("Wave Functions in Oscillator + Gaussian Perturbed Potential")
-# fig.savefig("test")
+# fig.tight_layout(w_pad=1.5 / 72, h_pad=1.5 / 72)
+# fig.suptitle("Wave Functions in a Perturbed Oscillator Potential")
 ```
 ::: 
 
@@ -221,7 +235,9 @@ fig.suptitle("Wave Functions in Oscillator + Gaussian Perturbed Potential")
 #| label: fig-harm-osc
 #| fig-cap: "A perturbed harmonic oscillator potential and its ground state wave function for various parameter values."
 #| echo: false
-plt.show()
+# with mpl.rc_context({'figure.constrained_layout.use': False}):
+with mpl.rc_context({'figure.constrained_layout.use': True, "figure.constrained_layout.h_pad": 1.5 / 72, "figure.constrained_layout.w_pad": 1.5 / 72}):
+    plt.show()
 ```
 
 
@@ -237,31 +253,74 @@ See @fig-harm-osc for a visual, or @sec-perturbed-oscillator-example.
 from emulate.graphs import PRED_KWARGS, BASIS_KWARGS, FULL_KWARGS
 ```
 
+```{python}
+ncsm = OscillatorEmulator('NCSM', H0=H0, H1=H1)
+ncsm.fit(len(p_train))
+E_pred_ncsm = np.stack([ncsm.predict(p_i, use_emulator=True) for p_i in p_valid])
+```
+
+
 
 ```{python}
 #| code-summary: Code to plot the RBM emulator wave functions
 #| code-fold: true
 #| output: false
-fig, ax = plt.subplots(figsize=(4, 2))
-ax.plot(r_grid, wf_train[:, 0], label='Train', **BASIS_KWARGS)
+fig, axes = plt.subplots(2, 1, figsize=(3.3, 3), sharex=False)
+
+ax = axes.ravel()[0]
+
+n_example = 3
+ax.plot(r_grid, wf_train[:, 0], label='Basis', **BASIS_KWARGS)
 ax.plot(r_grid, wf_train, **BASIS_KWARGS)
-for i in range(3):
-    if i == 0:
-        label_full = 'Exact'
-        label_pred = 'Emulated'
-    else:
-        label_full = label_pred = None
+label_full = 'Exact'
+for i in range(n_example):
     ax.plot(r_grid, osc_wfs @ emulator.exact_wave_function(p_valid[i]), label=label_full, **FULL_KWARGS)
-    ax.plot(r_grid, osc_wfs @ emulator.emulate_wave_function(p_valid[i]), label=label_pred, **PRED_KWARGS)
+    if i == 0:
+        label_pred = 'Emulator'
+        ax.plot(r_grid, osc_wfs @ emulator.emulate_wave_function(p_valid[i]),   label=label_pred, c='w', **PRED_KWARGS)
+    ax.plot(r_grid, osc_wfs @ emulator.emulate_wave_function(p_valid[i]), **PRED_KWARGS)
+    label_full = None
+# ax.set_xlabel(r"$r$")
+# ax.set_ylabel(r"$\psi(r)$ (RBM)")
+ax.set_ylabel(r"$\psi(r)$")
+ax.set_yticks([])
+ax.set_xticks([])
+ax.axhline(0, 0, 1, c='k', lw=0.8, zorder=0)
+# ax.set_title("RBM Emulated Radial Wave Functions")
+ax.legend(loc='lower left', bbox_to_anchor=(0, 1.03, 1, 1), ncol=3, borderaxespad=0, mode="expand")
+ax.spines.right.set_visible(False)
+ax.spines.top.set_visible(False)
+ax.spines.bottom.set_visible(False)
+# ax.spines.top.set_visible(False)
+ax.text(0.95, 0.95, "RBM", ha="right", va="top", bbox=dict(boxstyle="round", fc="w"), transform=ax.transAxes)
+
+
+# fig, ax = plt.subplots(figsize=(4, 2))
+ax = axes.ravel()[1]
+ax.plot(r_grid, osc_wfs[:, 0], **BASIS_KWARGS)
+ax.plot(r_grid, osc_wfs, **BASIS_KWARGS)
+for i in range(n_example):
+    ax.plot(r_grid, osc_wfs @ ncsm.exact_wave_function(p_valid[i]), label=label_full, **FULL_KWARGS)
+    ax.plot(r_grid, osc_wfs @ ncsm.emulate_wave_function(p_valid[i]), label=label_pred, **PRED_KWARGS)
 ax.set_xlabel(r"$r$")
-ax.set_ylabel(r"$u_0(r)$")
-ax.set_title("RBM Emulated Radial Wave Functions")
-ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
+# ax.set_ylabel(r"$\psi(r)$ (NCSM)")
+ax.set_ylabel(r"$\psi(r)$")
+ax.set_yticks([])
+ax.set_xticks([0, 1, 2, 3])
+ax.axhline(0, 0, 1, c='k', lw=0.8, zorder=0)
+ax.spines.right.set_visible(False)
+ax.spines.top.set_visible(False)
+ax.spines.bottom.set_position(('outward', 5))
+ax.spines.bottom.set_bounds((0, 3))
+ax.text(0.95, 0.95, "HO", ha="right", va="top", bbox=dict(boxstyle="round", fc="w"), transform=ax.transAxes)
+# ax.set_title("Emulated Radial Wave Functions (NCSM)")
+# ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
+
 ```
 ::: 
 
 ```{python}
-#| label: fig-rbm-eigen-emulator-wavefunctions
+#| label: fig-eigen-emulator-wavefunctions
 #| fig-cap: "Wave functions constructed via a RBM-based eigen-emulator"
 #| echo: false
 plt.show()
@@ -278,20 +337,16 @@ display(w)
 
 
 ::: {.content-hidden when-format="pdf"}
-```{python}
-ncsm = NCSMEmulator('NCSM', H0=H0, H1=H1)
-ncsm.fit(len(p_train))
-E_pred_ncsm = np.stack([ncsm.predict(p_i, use_emulator=True) for p_i in p_valid])
-```
 
 
 
 
+<!--
 ```{python}
 fig, ax = plt.subplots(figsize=(4, 2))
 ax.plot(r_grid, osc_wfs[:, 0], label='Train', **BASIS_KWARGS)
 ax.plot(r_grid, osc_wfs, **BASIS_KWARGS)
-for i in range(3):
+for i in range(n_example):
     if i == 0:
         label_full = 'Exact'
         label_pred = 'Emulated'
@@ -305,12 +360,13 @@ ax.set_title("Emulated Radial Wave Functions (NCSM)")
 ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
 plt.show()
 ```
+-->
 
 
-
+<!--
 ```{python}
 fig, ax = plt.subplots(figsize=(4, 2))
-for i in range(3):
+for i in range(n_example):
     ax.plot(
         r_grid,
         osc_wfs @ (ncsm.exact_wave_function(p_valid[i])-ncsm.emulate_wave_function(p_valid[i])),
@@ -327,31 +383,36 @@ ax.set_title("Wave Function Residuals")
 ax.axhline(0, 0, 1, c='lightgrey', lw=0.8, zorder=0)
 plt.show()
 ```
+-->
 
 
 ```{python}
-fig, ax = plt.subplots(figsize=(4, 2))
-for i in range(3):
+#| label: fig-wave-function-residuals
+#| fig-cap: "Absolute residuals between each emulator and the exact wave function calculation"
+#| echo: false
+fig, ax = plt.subplots(figsize=(3.3, 2.5))
+for i in range(n_example):
     ax.semilogy(
         r_grid,
         np.abs(osc_wfs @ (ncsm.exact_wave_function(p_valid[i])-ncsm.emulate_wave_function(p_valid[i]))),
-        ls='--', label='NCSM' if i == 0 else None
+        ls='--', label="HO" if i == 0 else None
     )
     ax.semilogy(
         r_grid,
         np.abs(osc_wfs @ (emulator.exact_wave_function(p_valid[i])-emulator.emulate_wave_function(p_valid[i]))),
         ls='-', label='RBM' if i == 0 else None
     )
-ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
+# ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
+ax.legend()
 ax.set_xlabel(r"$r$")
-# ax.set_title("Wave Function Absolute Residuals")
+ax.set_title("Wave Function Absolute Residuals")
 plt.show()
 ```
 
 
 
 ```{python}
-kernel = C(1) * RBF(length_scale=[1,1,1])
+kernel = C(1) * RBF(length_scale=[1, 1, 1])
 gp = GaussianProcessRegressor(kernel=kernel)
 gp.fit(p_train, emulator.E_train)
 E_pred_gp, E_std_gp = gp.predict(p_valid, return_std=True)
@@ -359,10 +420,13 @@ E_pred_gp, E_std_gp = gp.predict(p_valid, return_std=True)
 
 
 ```{python}
-fig, ax = plt.subplots(figsize=(4, 2))
-ax.semilogy(np.arange(len(E_full)), np.abs(E_pred_gp-E_full), label='GP', ls='-.')
-ax.semilogy((E_pred_ncsm-E_full), label='NCSM', ls='--')
-ax.semilogy((E_pred-E_full), label='RBM', ls='--')
+#| label: fig-energy-residuals
+#| fig-cap: "Absolute residuals between each emulator and the exact energy calculation"
+#| echo: false
+fig, ax = plt.subplots(figsize=(3.3, 2))
+ax.semilogy(np.arange(len(E_full)), np.abs(E_pred_gp-E_full), label='GP', ls=':')
+ax.semilogy((E_pred_ncsm-E_full), label="HO", ls='--')
+ax.semilogy((E_pred-E_full), label='RBM', ls='-')
 ax.legend(loc='upper left', bbox_to_anchor=(1.03, 1), borderaxespad=0)
 ax.set_title("Ground-State Energy Residuals")
 ax.set_xlabel("Validation Index")
@@ -394,7 +458,7 @@ stdv_E_valid_1d = stdv_psi_valid_1d ** 2
 ```
 
 ```{python}
-fig, axes = plt.subplots(2, 1, figsize=(3.5, 4), sharex=True)
+fig, axes = plt.subplots(2, 1, figsize=(3.3, 3.2), sharex=True)
 
 ax = axes[0]
 ax.plot(p0_valid_1d, psi_residual_1d, label=r"$||\,|{\Delta\psi}\rangle\,||$", **FULL_KWARGS)
@@ -442,9 +506,12 @@ R_pred_gp, R_std_gp = gp_op.predict(p_valid, return_std=True)
 
 
 ```{python}
-fig, ax = plt.subplots(figsize=(4, 2))
-ax.semilogy(np.arange(len(R_full)), np.abs(R_pred_gp-R_full), label='GP', ls='-.')
-ax.semilogy(np.abs(R_pred_ncsm-R_full), label='NCSM', ls='--')
+#| label: fig-radius-residuals
+#| fig-cap: "Absolute residuals between each emulator and the exact radius calculation"
+#| echo: false
+fig, ax = plt.subplots(figsize=(3.4, 2))
+ax.semilogy(np.arange(len(R_full)), np.abs(R_pred_gp-R_full), label='GP', ls=':')
+ax.semilogy(np.abs(R_pred_ncsm-R_full), label="HO", ls='--')
 ax.semilogy(np.abs(R_pred-R_full), label='RBM')
 ax.legend(loc='upper left', bbox_to_anchor=(1.03,1), borderaxespad=0)
 ax.set_title("Ground-State Radius Residuals")
