overall update and clean up

--- a/docs/emulator_refs.bib
+++ b/docs/emulator_refs.bib
@@ -1,10 +1,3 @@
-
-@article{KVP_vs_NVP:2022,
-	author = {Garcia, A. J. and Drischler, C. and Furnstahl, R. J. and Melendez, J. A. and Zhang, Xilin},
-	date-added = {2022-10-17 18:47:36 -0400},
-	date-modified = {2022-10-17 18:49:29 -0400},
-	title = {{in preparation.}}}
-
 @article{Melendez:2022,
 	archiveprefix = {arXiv},
 	author = {Melendez, J. A. and Drischler, C. and Furnstahl, R. J. and Garcia, A. J. and Zhang, Xilin},
@@ -13,6 +6,30 @@
 	primaryclass = {nucl-th},
 	title = {{Model reduction methods for nuclear emulators}},
 	year = {2022}}
+
+@article{Yapa:2022nnv,
+    author = {Yapa, Nuwan and K\"onig, Sebastian},
+    title = "{Volume extrapolation via eigenvector continuation}",
+    eprint = "2201.08313",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.106.014309",
+    journal = "Phys. Rev. C",
+    volume = "106",
+    number = "1",
+    pages = "014309",
+    year = "2022"
+}
+
+@article{Lucchese:1989zz,
+    author = "Lucchese, Robert R.",
+    title = "{Anomalous singularities in the complex Kohn variational principle of quantum scattering theory}",
+    doi = "10.1103/PhysRevA.40.6879",
+    journal = "Phys. Rev. A",
+    volume = "40",
+    pages = "6879--6885",
+    year = "1989"
+}
 
 @book{Benner_2017aa,
 	abstract = {The special volume offers a global guide to new concepts and approaches concerning the following topics: reduced basis methods, proper orthogonal decomposition, proper generalized decomposition, approximation theory related to model reduction, learning theory and compressed sensing, stochastic and high-dimensional problems, system-theoretic methods, nonlinear model reduction, reduction of coupled problems/multiphysics, optimization and optimal control, state estimation and control, reduced order models and domain decomposition methods, Krylov-subspace and interpolatory methods, and applications to real industrial and complex problems. The book represents the state of the art in the development of reduced order methods. It contains contributions from internationally respected experts, guaranteeing a wide range of expertise and topics. Further, it reflects an important effort, carried out over the last 12 years, to build a growing research community in this field. Though not a textbook, some of the chapters can be used as reference materials or lecture notes for classes and tutorials (doctoral schools, master classes). },
