--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -15,6 +15,7 @@
 
 \usepackage{booktabs}
 \usepackage{dsfont}
+\usepackage{mathds}
 
 % Think about defining new standalone macros for this work
 % \input{buqeye_macros}
@@ -24,7 +25,7 @@
 
 
 % color links (citation, equation, etc.) and define keywords
-\definecolor{linkcolor}{rgb}{0,0,0.40} 
+\definecolor{linkcolor}{rgb}{0,0,0.40}
 \hypersetup{%
     pdfsubject=Paper,
     pdfkeywords={nuclear physics} {Bayesian} {chiral EFT} {emulator} {reduced-order models} {variational principles},
