--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,3 +1,132 @@
+
+
+
+@unpublished{XilinZhangLECM2022,
+title= {Recent developments in the emulations of
+quantum continuum states},
+author = {Xilin Zhang},
+year = {2022},
+note= {Low Energy Community Meeting, August, 2022, Argonne National Laboratory, USA},
+URL= {https://fribtheoryalliance.org/content/Resources/Talks/LECM2022_xz.pdf},
+}
+
+
+
+@article{Variational_Ritz_history_review_2012,
+author = {Gander, Martin J. and Wanner, Gerhard},
+title = {From Euler, Ritz, and Galerkin to Modern Computing},
+journal = {SIAM Review},
+volume = {54},
+number = {4},
+pages = {627-666},
+year = {2012},
+doi = {10.1137/100804036},
+URL = {https://doi.org/10.1137/100804036},
+eprint- = {https://doi.org/10.1137/100804036},
+abstract = { The so-called Ritz--Galerkin method is one of the most fundamental tools of modern computing. Its origins lie in Hilbert's “direct” approach to the variational calculus of Euler--Lagrange and in the thesis of Walther Ritz, who died 100 years ago at the age of 31 after a long battle with tuberculosis.... We will see in this article that the path leading to modern computational methods and theory involved a long struggle over three centuries requiring the efforts of many great mathematicians. }
+}
+
+
+
+
+@book{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  volume={2},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{myren2021comparison,
+  title={A comparison of Gaussian processes and neural networks for computer model emulation and calibration},
+  author={Myren, Samuel and Lawrence, Earl},
+  journal={Statistical Analysis and Data Mining: The ASA Data Science Journal},
+  volume={14},
+  number={6},
+  pages={606--623},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+
+
+@article{Lazauskas:2019rfb,
+    author = "Lazauskas, Rimantas and Carbonell, Jaume",
+    title = "{The Faddeev\textendash{}Yakubovsky Symphony}",
+    eprint = "1908.04861",
+    archivePrefix = "arXiv",
+    primaryClass = "quant-ph",
+    doi = "10.1007/s00601-019-1529-5",
+    journal = "Few Body Syst.",
+    volume = "60",
+    number = "4",
+    pages = "62",
+    year = "2019"
+}
+
+@article{Deltuva:2012kt,
+    author = "Deltuva, A. and Fonseca, A. C. and Lazauskas, R.",
+    title = "{Faddeev equation approach for three-cluster nuclear reactions}",
+    eprint = "1201.4979",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1007/978-3-319-01077-9_1",
+    journal = "Lect. Notes Phys.",
+    volume = "875",
+    pages = "1--23",
+    year = "2014"
+}
+
+@article{Gloeckle:1995jg,
+    author = "Gloeckle, Walter and Witala, H. and Huber, D. and Kamada, H. and Golak, J.",
+    title = "{The Three nucleon continuum: Achievements, challenges and applications}",
+    doi = "10.1016/0370-1573(95)00085-2",
+    journal = "Phys. Rept.",
+    volume = "274",
+    pages = "107--285",
+    year = "1996"
+}
+
+@article{Marcucci:2019hml,
+    author = "Marcucci, L. E. and Dohet-Eraly, J. and Girlanda, L. and Gnech, A. and Kievsky, A. and Viviani, M.",
+    title = "{The Hyperspherical Harmonics method: a tool for testing and improving nuclear interaction models}",
+    eprint = "1912.09751",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.3389/fphy.2020.00069",
+    journal = "Front. in Phys.",
+    volume = "8",
+    pages = "69",
+    year = "2020"
+}
+
+
+
+
+@book{Mikhlin_1967,
+title={Variational Methods in Mathematical Physics},
+note={[Translated by T. Boddington  for Pergamon Press, Oxford, 1964]},
+volume-={15}, DOI={10.1017/S0013091500011834},
+number-={3},
+journal-={Proceedings of the Edinburgh Mathematical Society},
+publisher={Cambridge University Press},
+author={S. G. Mikhlin},
+year={1967},
+pages-={246–247}
+}
+
+@book{Brenner:2008,
+  author = {Brenner, Susanne C. and Scott, Larkin R.},
+  doi = {10.1007/978-0-387-75934-0},
+  isbn = {9780387759333},
+  publisher = {Springer},
+  series = {Texts in Applied Mathematics},
+  title = {{The Mathematical Theory of Finite Element Methods}},
+  url = {http://dx.doi.org/10.1007/978-0-387-75934-0},
+  volume = 15,
+  year = 2008
+}
+
 @article{knuth84,
   author     = {Knuth, Donald E.},
   title      = {Literate Programming},
@@ -14,6 +143,45 @@
   month      = may,
   pages      = {97–111},
   numpages   = {15}
+}
+
+@article{Gobel:2019jba,
+    author = {G\"obel, M. and Hammer, H. -W. and Ji, C. and Phillips, D. R.},
+    title = "{Momentum-Space Probability Density of $^6$He in Halo Effective Field Theory}",
+    eprint = "1904.07182",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1007/s00601-019-1528-6",
+    journal = "Few Body Syst.",
+    volume = "60",
+    number = "4",
+    pages = "61",
+    year = "2019"
+}
+
+@article{Tabakin:1969mr,
+    author = "Tabakin, F.",
+    title = "{Inverse scattering problem for separable potentials}",
+    doi = "10.1103/PhysRev.177.1443",
+    journal = "Phys. Rev.",
+    volume = "177",
+    pages = "1443--1451",
+    year = "1969"
+}
+
+@article{Takatsuka1981Scattering,
+  title = {Variational scattering theory using a functional of fractional form. I. General theory},
+  author = {Takatsuka, Kazuo and McKoy, Vincent},
+  journal = {Phys. Rev. A},
+  volume = {23},
+  issue = {5},
+  pages = {2352--2358},
+  numpages = {0},
+  year = {1981},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.23.2352},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.23.2352}
 }
 
 
